--- a/BikeMap002.html
+++ b/BikeMap002.html
@@ -1,1 +1,13 @@
-<html><body><script src="https://zoomhub.net/gqkK5.js?width=535px&height=auto&border=none"></script></html></body>
+<html>
+  <head>
+    <title>
+    Pinch to Zoom Map 002 
+    </title>
+    <style>
+      body { text-align: center; background-color: black; }
+    </style>
+  </head>
+  <body>
+    <script src="https://zoomhub.net/gqkK5.js?width=535px&height=auto&border=none"></script>
+  </body>
+</html>
