--- a/BikeMap002.html
+++ b/BikeMap002.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-    Pinch to Zoom Map 002 
+    Pinch to Zoom Map ~ Zoomhub 
     </title>
     <style>
       body { text-align: center; background-color: black; }
