--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-<div id="ww_06c853c6fa5ca" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl9265"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://weatherwidget.org/it/" id="ww_06c853c6fa5ca_u" target="_blank">Widget delle previsioni meteo per sito web</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_06c853c6fa5ca"></script>
+<div id="ww_06c853c6fa5ca" v='1.3' loc='id' a='{"t":"responsive","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_taipei/week/" id="ww_06c853c6fa5ca_u" target="_blank">weer deze week Taipei</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_06c853c6fa5ca"></script>
   </body>
 </html>
