--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -1,8 +1,13 @@
 <html>
   <title>Hourly Forecast</title>
   <head>
+    <style>
+      body { background-color: white; }
+    </style>
   </head>
   <body>
-<div id="ww_06c853c6fa5ca" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_taipei/week/" id="ww_06c853c6fa5ca_u" target="_blank">weer deze week Taipei</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_06c853c6fa5ca"></script>
+<div id="ww_06c853c6fa5ca" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_taipei/week/" id="ww_06c853c6fa5ca_u" target="_blank">weer deze week Taipei</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_06c853c6fa5ca"></script>
+    <br><hr><br>
+    <div id="ww_06a88d8044c95" v='1.3' loc='id' a='{"t":"responsive","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_cwi":3,"el_ctm":3,"cl_odd":"#0000000a"}'>Weather Data Source: <a href="https://weerlabs.nl/weer_taipei/week/" id="ww_06a88d8044c95_u" target="_blank">weer deze week Taipei</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_06a88d8044c95"></script>
   </body>
 </html>
