--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -3,6 +3,7 @@
   <head>
     <style>
       body { background-color: white; }
+      #ww_06a88d8044c95 { max-width: 330px; }
     </style>
   </head>
   <body>
