--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -3,13 +3,17 @@
   <head>
     <style>
       body { background-color: white; }
-      #ww_06a88d8044c95 { max-width: 300px; }
+      #ww_06a88d8044c95 { max-width: 300px !important; }
+      hr { opacity: 0.33; }
     </style>
   </head>
-  <body>
+  <body><center>
     
-<div id="ww_27ef90362e0b1" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://wetterlang.de/paris_wetter_30_tage/" id="ww_27ef90362e0b1_u" target="_blank">30 tage wetter Paris</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_27ef90362e0b1"></script>
+<div id="ww_27ef90362e0b1" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Weather Data Source: <a href="https://wetterlang.de/paris_wetter_30_tage/" id="ww_27ef90362e0b1_u" target="_blank">30 tage wetter Paris</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_27ef90362e0b1"></script>
 
-    
+<br><br><hr><br>
+
+<div id="ww_dfc4c69d3bd" v='1.3' loc='id' a='{"t":"responsive","lang":"en","ids":["wl9235"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_nme":3,"el_cwi":3,"el_ctm":3,"cl_odd":"#0000000a"}'>Weather Data Source: <a href="https://tiempolargo.com/los_angeles_tiempo_25_dias/" id="ww_dfc4c69d3bd_u" target="_blank">el tiempo en Los Ángeles 25 días</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_dfc4c69d3bd"></script>
+</center>    
 </body>
 </html>
