--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -2,7 +2,7 @@
   <title>Hourly Forecast</title>
   <head>
     <style>
-      body { background-color: white; }
+      body { background-color: white; color: white; }
       #container { max-width: 300px !important; }
       hr { opacity: 0.33; }
     </style>
