--- a/WhatsTheWeather.html
+++ b/WhatsTheWeather.html
@@ -6,6 +6,7 @@
       body, a { background-color: white; color: white; }
       #container { max-width: 300px !important; }
       #ender { color: #6b0580; display: block; width: 100%; padding-top: 5px; font-size: 20px; }
+      #ww_27ef90362e0b1 { min-height: 250px; }
     </style>
   </head>
   <body><center>
