--- a/NTmapVar1.html
+++ b/NTmapVar1.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>
     Pinch to zoom ~ 新北 var1
     </title>
