--- a/BikeMap001.html
+++ b/BikeMap001.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>
     Pinch to zoom ~ TW Bike Map
     </title>
