--- a/NTmapVar1.html
+++ b/NTmapVar1.html
@@ -5,21 +5,8 @@
     Pinch to zoom ~ 新北 var1
     </title>
     <style>
-      iframe 
-        {
-        position:fixed; 
-        top:0; 
-        left:0; 
-        bottom:0; 
-        right:0; 
-        width:100%; 
-        height:100%; 
-        border:none; 
-        margin:0; 
-        padding:0; 
-        overflow:hidden; 
-        z-index:999999;
-        }
+       body { display: flex; justify-content: center; background-color: black; }
+      .__zoomhub __seadragon { width:100% !important; }
     </style>
   </head>
   <body>
