--- a/NTmapVar1.html
+++ b/NTmapVar1.html
@@ -1,13 +1,10 @@
 <html>
   <head>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="NTmapVar.css">
     <title>
     Pinch to zoom ~ 新北 var1
     </title>
-    <style>
-       body { display: flex; justify-content: center; background-color: black; }
-      .__zoomhub __seadragon { width:100% !important; }
-    </style>
   </head>
   <body>
     <iframe src="https://srv2.zoomable.ca/viewer.php?i=imgc861c2274582ed85_new_taipei_variant_1" frameborder="0" allowfullscreen>
