--- a/NTmapVar3.html
+++ b/NTmapVar3.html
@@ -1,26 +1,10 @@
 <html>
   <head>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="NTmapVar.css">	  
     <title>
     Pinch to zoom ~ 新北 var3
     </title>
-    <style>
-      iframe
-	{
-        position:fixed; 
-        top:0; 
-        left:0; 
-        bottom:0; 
-        right:0; 
-        width:100%; 
-        height:100%; 
-        border:none; 
-        margin:0; 
-        padding:0; 
-        overflow:hidden; 
-        z-index:999999;
-        }
-    </style>
   </head>
   <body>
     <iframe src="https://srv2.zoomable.ca/viewer.php?i=imgdb919960b2fa01a3_new_taipei_variant_3" frameborder="0" allowfullscreen>
