--- a/TwMapsVar2.html
+++ b/TwMapsVar2.html
@@ -1,26 +1,10 @@
 <html>
   <head>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="TwMapsVar.css">	  
     <title>
     Pinch to zoom ~ 臺北 var2
     </title>
-    <style>
-      iframe 
-        {
-        position:fixed; 
-        top:0; 
-        left:0; 
-        bottom:0; 
-        right:0; 
-        width:100%; 
-        height:100%; 
-        border:none; 
-        margin:0; 
-        padding:0; 
-        overflow:hidden; 
-        z-index:999999;
-        }
-    </style>
   </head>
   <body>
 	<script src="https://zoomhub.net/xwPoe.js?width=535px&height=auto&border=none"></script>
