--- a/TwMapsVar2.html
+++ b/TwMapsVar2.html
@@ -1,12 +1,1 @@
-<html>
-  <head>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="TwMapsVar.css">	  
-    <title>
-    Pinch to zoom ~ 臺北 var2
-    </title>
-  </head>
-  <body>
-	<script src="https://zoomhub.net/xwPoe.js?width=535px&height=auto&border=none"></script>
-  </body>
-</html>
+<html><head><link rel="icon" type="image/x-icon" href="favicon.ico"><link rel="stylesheet" href="TwMapsVar.css"><title>Pinch to zoom ~ 臺北 var2</title></head><body><script src="https://zoomhub.net/xwPoe.js?width=535px&height=auto&border=none"></script></body></html>
