--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
-<html><body>
+<html>
+  <head><title>Taipei Riverside Bike Maps</title></head>  
   
   
-<article class="markdown-body entry-content container-lg" itemprop="text"><h1 dir="auto"><a id="user-content-bikemaps" class="anchor" aria-hidden="true" href="#bikemaps"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>Bikemaps</h1>
+<body>
+  
+  
+<article class="markdown-body entry-content container-lg" itemprop="text">
+<h1 dir="auto">Bikemaps</h1>
 <p dir="auto">Zoomable versions of Taipei riverside bike route maps I've found all over the internet.</p>
-<h2 dir="auto"><a id="user-content-taipei-maps" class="anchor" aria-hidden="true" href="#taipei-maps"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>Taipei maps</h2>
+<h2 dir="auto">Taipei maps</h2>
 <p dir="auto">Maps that contain Bike Exit info for Taipei</p>
 <ul dir="auto">
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/TwMapVar1.html" rel="nofollow">Taipei City variant 1</a></li>
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/TwMapVar2.html" rel="nofollow">Taipei City variant 2</a></li>
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/TwMapVar3.html" rel="nofollow">Taipei City variant 3</a></li>
+<li><a href="TwMapVar1.html" rel="nofollow">Taipei City variant 1</a></li>
+<li><a href="TwMapVar2.html" rel="nofollow">Taipei City variant 2</a></li>
+<li><a href="TwMapVar3.html" rel="nofollow">Taipei City variant 3</a></li>
 </ul>
-<h2 dir="auto"><a id="user-content-new-taipei-maps" class="anchor" aria-hidden="true" href="#new-taipei-maps"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>New Taipei maps</h2>
+<h2 dir="auto">New Taipei maps</h2>
 <p dir="auto">Maps that contain Bike Exit info for New Taipei</p>
 <ul dir="auto">
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/NTmapVar1.html" rel="nofollow">New Taipei City variant 1</a></li>
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/NTmapVar2.html" rel="nofollow">New Taipei City variant 2</a></li>
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/NTmapVar3.html" rel="nofollow">New Taipei City variant 3</a></li>
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/NTmapVar4.html" rel="nofollow">New Taipei City variant 4</a></li>
+<li><a href="NTmapVar1.html" rel="nofollow">New Taipei City variant 1</a></li>
+<li><a href="NTmapVar2.html" rel="nofollow">New Taipei City variant 2</a></li>
+<li><a href="NTmapVar3.html" rel="nofollow">New Taipei City variant 3</a></li>
+<li><a href="NTmapVar4.html" rel="nofollow">New Taipei City variant 4</a></li>
 </ul>
-<h2 dir="auto"><a id="user-content-weather-forecast" class="anchor" aria-hidden="true" href="#weather-forecast"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>Weather forecast</h2>
+<h2 dir="auto">Weather forecast</h2>
 <p dir="auto">Hourly and weekly weather forecast</p>
 <ul dir="auto">
-<li><a href="https://r0d3r1ck0rd0n3z.github.io/bikemaps/WhatsTheWeather.html" rel="nofollow">https://r0d3r1ck0rd0n3z.github.io/bikemaps/WhatsTheWeather.html</a></li>
+<li><a href="WhatsTheWeather.html" rel="nofollow">WhatsTheWeather.html</a></li>
 </ul>
 </article>
   
   
   
-  </body></html>
+</body></html>
