--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <head><title>Taipei Riverside Bike Maps</title></head>  
+  <head>
+    <title>Taipei Riverside Bike Maps</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>  
   
   
 <body>
